# summit_hip_numbers

./: .gitignore  AUDIO_TODO.md  CI_FIXES_APPLIED.md  CI_FIXES_SUMMARY.md  CI_LOCAL_TEST_RESULTS.md  CI_STATUS.md  CLAUDE.md  CONFIGURATION.md  Cargo.toml  Cross.toml  DEPLOYMENT.md  FFMPEG_MIGRATION.md  README.md  WINDOWS_DEPLOYMENT_IMPROVEMENTS.md  build_windows.ps1  build_windows_msys2.sh  clippy.toml  config.dist.toml  config.toml  flake.nix  install_macos.sh  install_windows.ps1  installer.iss  result  rustfmt.toml  shell.nix
.cargo/: audit.toml  config.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/scripts/: macos-build-wrapper.sh
.github/workflows/: build-windows.yml  build-xtask.yml  build-xtask.yml.backup  build.yml  test-windows.yml  test.yml
assets/: config.toml
assets/splash/: README.txt
build-assets/: README.md
build-assets/linux-x64/: README.md
build-assets/macos-x64/: README.md
build-assets/windows-x64/: README.md
crates/summit_hip_numbers/: Cargo.toml
crates/summit_hip_numbers/src/: file_scanner.rs  main.rs  video_player.rs
crates/usb_prep_tool/: Cargo.toml
crates/usb_prep_tool/src/: main.rs
scripts/: build_all.sh  build_macos.sh  build_windows.ps1  build_windows_complete.sh  build_windows_msys2.sh  ci_monitor.sh  fix_ci.sh  install_macos.sh  install_windows.ps1  installer.iss  prepare_dist.bat  prepare_dist.sh  test_ci_locally.sh  test_portable_comprehensive.ps1  test_portable_comprehensive.sh  test_portable_comprehensive_macos.sh  test_windows_distribution.sh
src/: file_scanner.rs  main.rs  video_player.rs
test_images/: 002-green.txt  004-yellow.txt  005-magenta.txt
tests/: integration_tests.rs
tests/assets/: 001-red.txt  003-blue.txt
usb_prep_tool/: Cargo.toml  README.md
usb_prep_tool/src/: main.rs
xtask/: Cargo.toml  README.md
xtask/src/: cross.rs  dist.rs  ffmpeg.rs  main.rs
