[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
zip = "2.2"
tar = "0.4"
flate2 = "1.0"
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"
which = "6.0"
colored = "2.1"
chrono = "0.4"
glob = "0.3"
