[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
walkdir = "2.3"
colored = "2.0"
chrono = "0.4"
glob = "0.3"
which = "6.0"
