[package]
name = "summit_hip_numbers"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["svg", "image"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
fern = "0.6"
chrono = "0.4.38"
tokio = { version = "1.38.0", features = ["sync"] }
image = "0.25.2"
dunce = "1.0"
rand = "0.8"
ffmpeg-next = { version = "7.0" }
cpal = "0.15"
rubato = "0.15"

[dev-dependencies]
tempfile = "3"

[features]
default = []
demo = []